<resources>
    <string name="app_name">Call Logger</string>
    <string name="history">History</string>
    <string name="numbers">Numbers</string>
    <string name="contacts">Contacts</string>
    <string name="non_contacts">Non-Contacts</string>

    <string name="description">Description</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed">Missed</string>
    <string name="answered">Answered</string>

    <!--For the filter options-->
    <string name="show">Show:</string>
    <string name="tabbed_contacts">    Contacts</string>
    <string name="tabbed_non_contacts">    Non-Contacts</string>
    <string name="tabbed_incoming">    Incoming</string>
    <string name="tabbed_outgoing">    Outgoing</string>

    <string name="search_hint">Search by number or contact name…</string>

    <string name="no_results">No Results</string>
    <string name="results">Results</string>

    <!--For the Numbers dialog fragment -->
    <string name="most_recent">Most Recent:</string>
    <string name="total_in">Total Incoming:</string>
    <string name="total_out">Total Outgoing:</string>
    <string name="notes">Notes</string>
    <string name="call">Call</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation_tile">Delete Confirmation</string>
    <string name="delete_confirmation_body">Are you sure you want to delete this number, and its history, from this application?</string>

    <!--For testing UI elements-->
    <string name="number_test">(515) 867–5309</string>
    <string name="date_time_test">5/17/2017 2:57pm</string>
    <string name="duration_test">1h 35m 6s</string>
    <string name="results_count_test">150 Results</string>
</resources>
