<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">

        <item android:id="@+id/contacts"
            android:title="@string/contacts"
            android:orderInCategory="1"
            android:checkable="true"
            />
        <item android:id="@+id/non_contacts"
            android:title="@string/non_contacts"
            android:orderInCategory="2"
            android:checkable="true"/>
        <item android:id="@+id/incoming"
            android:title="@string/incoming"
            android:orderInCategory="3"
            android:checkable="true"/>
        <item android:id="@+id/outgoing"
            android:title="@string/outgoing"
            android:orderInCategory="4"
            android:checkable="true"/>

    </group>
</menu>