<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_warning_black_24dp"
            android:tint="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/delete_confirmation_tile"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/delete_confirmation_body"
        android:textColor="@color/black_90_percent"
        android:textSize="18sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black_50_percent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/confirm_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textSize="18sp"
            android:textColor="@color/red"/>
        <TextView
            android:id="@+id/cancel_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/black"/>

    </LinearLayout>
</LinearLayout>