<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        >


        <TextView
            android:id="@+id/title_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contacts"
            android:textSize="24sp"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_number"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:text="@string/number_test"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/delete_button"
                android:layout_width="24dp"
                android:layout_height="52dp"
                android:layout_marginEnd="8dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/white"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center_vertical"
            android:text="@string/most_recent"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/recent_call_type_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/outgoing_made_icon"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/recent_date_time"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center"
                android:text="@string/date_time_test"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <TextView
            android:id="@+id/total_incoming"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/total_in"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/total_outgoing"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/total_out"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="@drawable/background_border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:text="@string/notes"
                android:textSize="14sp"
                android:textColor="@color/black_10_percent"/>

            <EditText
                android:id="@+id/notes_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textMultiLine"
                android:imeOptions=""
                android:textCursorDrawable="@null"
                android:background="@color/transparent"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black_50_percent"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:id="@+id/call_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/green_dark">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/phone_icon"
                    android:layout_gravity="center"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/call"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black_50_percent"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:id="@+id/done_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorPrimary">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/checkmark"
                    android:layout_gravity="center"
                    android:tint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/black_50_percent"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black_50_percent"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>