<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    android:animateLayoutChanges="true">


    <RelativeLayout
        android:id="@+id/bottom_navigation_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/app_name"/>

        <ImageView
            android:id="@+id/options_icon"
            android:layout_width="36dp"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:tint="@color/white"
            android:src="@drawable/vertical_dots"
            />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/options_icon"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:tint="@color/white"
            android:src="@drawable/search_icon"
            />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/search_field"
            style="@style/CustomEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:imeOptions="actionDone"
            android:hint="@string/search_hint"/>

        <ImageView
            android:id="@+id/clear_search_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="14dp"
            android:tint="@color/white"
            android:src="@drawable/x_icon"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/numbers_list_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white_transparent"
            android:text="@string/numbers"/>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"/>

        <TextView
            android:id="@+id/history_list_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white_transparent"
            android:text="@string/history"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
